<!--

Copyright 2012 Ajaykumar Kannan

This file is part of Sense and Sanity.

Sense and Sanity is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Sense and Sanity is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Sense and Sanity.  If not, see <http://www.gnu.org/licenses/>.

-->

<resources>

    <string name="app_name">Sense and Sanity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sense and Sanity</string>
    <string name="start_string">Start Service</string>
    <string name="stop_string">Stop Service</string>
    <string name="placeholder">placeholder</string>
    <string name="enableflip">Flip for Speaker</string>
    <string name="debugdata">Debugging Data</string>
    <string name="options">Options</string>
    <string name="enablesilence">Flip to Silence</string>
    <string name="pickupstring">Pick up to Answer (Experimental)</string>
    <string name="speakerstring">Speaker</string>
    <string name="headsetstring">Headset</string>
    <string name="volumestring">Volume</string>

</resources>
